package user;

option cc_generic_services = true;

message AuthRequest {
  optional string token = 1;
}

message AuthResponse {
  optional bool valid = 1;
  optional User user = 2;
}

message User {
  optional int32 id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string email = 4;
  optional string auth_token = 5;
}

service UserService {
  rpc auth (AuthRequest) returns (AuthResponse);
}
